crates/elenchus-solver/tests/snapshots/output_variants__prove_open_goal.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
assertion_line: 330
expression: "report(r#\"\n        FACT x a\n        RULE r:\n            WHEN x b\n            THEN x c\n        PROVE x c\n        CHECK x\n        \"#)"
---
RESULT: CONSISTENT
  PROVE     d.x c
      OPEN: the theory pins neither it nor its negation   (checked)
  ORPHAN    FACT d.x a — not used by any premise or rule (no effect on the result)
SUMMARY: 0 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 0
