crates/elenchus-solver/tests/snapshots/output_variants__try_closes_the_gap.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        RULE gate:\n            WHEN deploys is_ready\n            THEN deploys unblocked\n        CHECK BIDIRECTIONAL\n        TRY deploys is_ready\n        \"#)"
---
RESULT: UNDERDETERMINED
  UNDERDETERMINED  an alternative model exists
      fix: add FACT d.deploys unblocked (or NOT d.deploys unblocked) to pin the model
  TRY       d.deploys is_ready
      closes the gap: the model is now pinned   (checked)
SUMMARY: 0 conflicts, 1 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 1
