crates/elenchus-solver/tests/snapshots/output_variants__underdetermined_with_witness_hint.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        PREMISE e:\n            EXCLUSIVE\n                x a\n                x b\n        CHECK x BIDIRECTIONAL\n        \"#)"
---
RESULT: UNDERDETERMINED
  UNDERDETERMINED  an alternative model exists
      fix: add FACT d.x b (or NOT d.x b) to pin the model
SUMMARY: 0 conflicts, 1 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 1
